Implementacion completa de bootstrap a como estaba en la version anterior Se me puso el texto en rojo, que significa?

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,24 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{!-- <h1>{{title}}</h1>
+<p>Welcome to {{title}}</p> --}}
+<section class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4 mb-3">Tesoros Impresos</h1>
+        <p class="lead">Bienvenido a Tesoros Impresos. La idea de este sitio es generar un portal donde lectores de todo el mundo puedan subir citas de sus libros favoritos, asi como biografias de los autores, criticas e interpretaciones. Tambien habra un foro de chat, donde los lectores podran conversar e intercambiar libros.</p>
+    </div>
+</section>
+<!-- imagen libro -->
+<section class="container">
+    <div class="row d-flex justify-content-center">
+        <img  class="imagen" src="https://lapiedradesisifo.com/wp-content/uploads/2019/04/800px-Libro_de_los_Ep%C3%ADtomes.jpg" alt="imagen de un libro"/>
+    </div>
+</section>
+<!-- descripcion sitio -->
+<section class="container"> 
+    <div class="row mt-3">
+        <div class="col-xl-12"><p><strong>El sitio tendra, entre otras, las siguientes funciones:</strong></p></div>
+        <div class="col-xl-12"><p>Login: el usario tendra una contraseña unica desde la cual podra ingresar el sitio.</p></div>
+        <div class="col-xl-12"><p>Registro: La primera vez, cada usuario se dara de alta, con un mail, contraseña y nombre de usuario</p></div>
+        <div class="col-xl-12"><p>Home: El portal contara en su pagina principal con las citas o biografias mas nuevas que los usuarios hayan subido</p></div>
+        <div class="col-xl-12"><p>Foro: El sitio contara con un foro para conversaciones y debates, ademas de una pestaña para mensajes privados</p></div>
+    </div>
+</section>
