--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,20 +15,20 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-               <a class="nav-link opcion" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+               <a class="nav-link opcion" href="/">Inicio<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link opcion" href="registro.html">Registro</a>
+                <a class="nav-link opcion" href="registro">Registro</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link opcion" href="login.html">Iniciar Sesion</a>
+                <a class="nav-link opcion" href="login">Iniciar Sesion</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link opcion" href="contacto.html">Contacto</a>
+                <a class="nav-link opcion" href="contacto">Contacto</a>
             </li>
           </ul>
           <div class="nav-item">
-            <a class="nav-link opcion" href="contacto.html">Hola</a>
+            <a class="nav-link opcion" href="contacto">Hola</a>
           </div>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -61,7 +61,6 @@
 
         </div>
     </footer>
-    <script src="script1.js"></script>
     <script src="https://kit.fontawesome.com/af4e1d9cae.js" crossorigin="anonymous"></script>
   </body>
 </html>
