--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
@@ -38,10 +39,9 @@
     </nav>
     {{{body}}}
     {{!-- Footer --}}
-    <footer class="pie">
-        <div class="container-fluid">
+    <footer class="container-fluid pie">
             <div class="row justify-content-center">
-                <div class="col-lg-3 col-md-12 col-sm-12 rojo">
+                <div class="col-lg-3 col-md-3 col-sm-12 rojo">
                     <!-- <div class="row">
                         <span>Busquenos en nuestras redes</span>
                     </div> -->
@@ -51,16 +51,17 @@
                     <div class="row mt-3 justify-content-start">
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-12 col-sm-12 azul">
+                <div class="col-lg-3 col-md-3 col-sm-12 azul">
                     <span>Ubicacion</span>
                 </div>
-                <div class="col-lg-3 col-md-12 col-sm-12 verde">
+                <div class="col-lg-3 col-md-3 col-sm-12 verde">
                     <span>Contacto</span>
                 </div>
             </div>
-
-        </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/af4e1d9cae.js" crossorigin="anonymous"></script>
   </body>
 </html>
