--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,7 +8,7 @@
 <!-- formulario -->
 <section class="container">
     <div class="row">
-        <div class="col-4">
+        <div class="col">
             <form method = "POST" action="/login">
                 <div class="form-group">
                     <label for="mail">Email:</label>
