agregado de la pestania citas en el menu y la pestania identificarme

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,7 @@
                <a class="nav-link opcion" href="/">Inicio<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link opcion" href="registro">Registro</a>
+                <a class="nav-link opcion" href="citas">Citas literarias</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link opcion" href="login">Iniciar Sesion</a>
@@ -28,9 +28,18 @@
                 <a class="nav-link opcion" href="contacto">Contacto</a>
             </li>
           </ul>
-          <div class="nav-item">
-            <a class="nav-link opcion" href="contacto">Hola</a>
-          </div>
+          <div class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle opcion" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Identificarme
+        </a>
+        <div class="dropdown-menu menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item opcion" href="login">Iniciar Sesion</a>
+          <a class="dropdown-item opcion" href="registro">Registrarme</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </div>
+
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
