--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,13 +19,10 @@
                <a class="nav-link opcion" href="/">Inicio<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link opcion" href="citas">Citas literarias</a>
+                <a class="nav-link opcion" href="./citas">Citas literarias</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link opcion" href="login">Iniciar Sesion</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link opcion" href="contacto">Contacto</a>
+                <a class="nav-link opcion" href="./contacto">Contacto</a>
             </li>
           </ul>
           <div class="nav-item dropdown">
