--- a/views/citas.hbs
+++ b/views/citas.hbs
@@ -10,8 +10,9 @@
             <div class="col">
                 <div class="row"><span>Autor: {{autor}}</span></div>
                 <div class="row"><span>Libro: {{libro}}</span></div>
-                <a href="/citas/{{id}}" class="btn btn-primary">Leer cita</a>
+                <div class="row"><a href="/citas/{{id}}" class="btn btn-primary">Leer cita</a></div>
             </div>
         {{/each}}
     </div>
+    <h4 class="text-danger">{{message}}</h4>
 </div>
