--- a/views/contacto.hbs
+++ b/views/contacto.hbs
@@ -1,7 +1,7 @@
 <section class="jumbotron jumbotron-fluid">
     <div class="container">
         <h1 class="display-4 mb-3">Contacto</h1>
-        <p class="lead">Puede contactarse con nosotros a <a href="mailto:tesorosimpresos@gmail.com">tesorosimpresos@gmail.com</a> o llenando el siguiente formulario:</p>
+        <p class="lead">Puede contactarse con nosotros a <a href="mailto:tesorosimpresos123@gmail.com">tesorosimpresos123@gmail.com</a> o llenando el siguiente formulario:</p>
     </div>
 </section>
 
@@ -25,7 +25,7 @@
                     <label for="mensaje">Mensaje:</label>
                     <textarea class="form-control" name="mensaje" id="mensaje" rows="5" required></textarea>
                 </div>
-
+                <h5 class="text-success text-center">{{message}}</h5>
                 <button class="btn btn-success" type="submit">Enviar</button>
                 <button class="btn btn-warning ml-2" type="reset">Borrar</button>
             </form>
