--- a/views/login.hbs
+++ b/views/login.hbs
@@ -22,6 +22,7 @@
                     <button class="btn btn-success" type="submit">Ingresar</button>
                     <button class="btn btn-warning ml-2" type="reset">Borrar</button>
             </form>
+            <small class="text-center text-danger">{{message}}</small>
             <div class="row justify-content-center mt-2"><a class="links" href="registro.html">No tengo una cuenta</a></div>
         </div>
 
