creado el panel de configuracion p/ subir citas

--- a/views/admin/adminCitas.hbs
+++ b/views/admin/adminCitas.hbs
@@ -1,7 +1,7 @@
 <div class="container" style="margin-top: 10vh;">
     <div class="row">
         <div class="col-12">
-            <h4>Citas cargadas</h4>
+            <h4>Tus Citas</h4>
             <div class="col-4 m-3">
                 <a class="btn btn-primary" href="/admin/citas/alta">Agregar Cita</a>
 
@@ -12,7 +12,6 @@
                     <th>Autor</th>
                     <th>Cita</th>
                     <th>Libro</th>
-                    <th>Quien lo subio</th>
                     <th></th>
                     <th></th>
                     </tr>
@@ -23,7 +22,6 @@
                         <td>{{autor}}</td>
                         <td>{{cita}}</td>
                         <td>{{libro}}</td>
-                        <td>{{nombre}}</td>
                         <td><a href="">Editar</a></td>
                         {{!-- tengo mandarle el id para saber cual debe borrar --}}
                         {{!-- ruta: /admin/baja/id --}}
