--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,18 +30,21 @@
                 <a class="nav-link opcion" href="/foros/">Foros</a>
             </li>
           </ul>
+          {{#if req.session.user}}
+          <div class="nav-item"><span>estas logueado</span></div>
+          {{else}}
           <div class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle opcion" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Identificarme
-        </a>
-        <div class="dropdown-menu menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item opcion" href="/login/">Iniciar Sesion</a>
-          <a class="dropdown-item opcion" href="/registro/">Registrarme</a>
-          {{!-- <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a> --}}
-        </div>
-      </div>
-
+            <a class="nav-link dropdown-toggle opcion" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Identificarme
+            </a>
+            <div class="dropdown-menu menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item opcion" href="/login/">Iniciar Sesion</a>
+              <a class="dropdown-item opcion" href="/registro/">Registrarme</a>
+              {{!-- <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a> --}}
+            </div>
+          </div>
+          {{/if}}
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
