--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,6 +31,7 @@
             </li>
           </ul>
           {{#if req.session.user}}
+          {{!-- partials handlebars --}}
           <div class="nav-item"><span>estas logueado</span></div>
           {{else}}
           <div class="nav-item dropdown">
