correccion de aspectos visuales de adminCitas

--- a/views/admin/adminCitas.hbs
+++ b/views/admin/adminCitas.hbs
@@ -22,7 +22,7 @@
                         <td>{{autor}}</td>
                         <td>{{cita}}</td>
                         <td>{{libro}}</td>
-                        <td><a href="">Editar</a></td>
+                        <td><a href="/admin/citas/editar/{{id}}">Editar</a></td>
                         {{!-- tengo mandarle el id para saber cual debe borrar --}}
                         {{!-- ruta: /admin/baja/id --}}
                         <td><a onclick="borrar({{id}})" href="#">Borrar</a></td>
@@ -33,7 +33,6 @@
         </div>
     </div>
 </div>
-{{!-- <script src="/javascripts/adminCitas.js"></script> --}}
 
 <script>
     const borrar = (id) =>{
