--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -27,14 +27,14 @@
                     <div class="form-group row">
                         <label for="user" class="col-sm-4 col-form-label text-right">Nombre de Usuario<span class="text-danger">*</span></label>
                         <div class="col-sm-8">
-                          <input type="text" class="form-control" id="user" name="user" required>
+                          <input type="text" class="form-control" id="usuario" name="usuario" required>
                         </div>
                       </div>
 
                     <div class="form-group row">
                         <label for="mail" class="col-sm-4 col-form-label text-right">Email<span class="text-danger">*</span></label>
                         <div class="col-sm-8">
-                            <input type="email" class="form-control" id="mail" name="mail" required>
+                            <input type="email" class="form-control" id="correo" name="correo" required>
                         </div>
                     </div>
 
