--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -10,7 +10,7 @@
     <section class="container">
         <div class="row">
             <div class="col-xl-6 p-0">
-                <form method = "POST" action="/registro">
+                <form id="formRegistro">
                     <div class="form-group row">
                       <label for="nombre" class="col-sm-4 col-form-label text-right">Nombre<span class="text-danger">*</span></label>
                       <div class="col-sm-8">
@@ -60,7 +60,7 @@
                     </div>
 
                     <div class="form-group row justify-content-center mt-4">
-                        <button type="submit" class="btn btn-success">Registrarse</button>
+                        <button type="button" class="btn btn-success" id="boton">Registrarse</button>
                         <button  type="reset" class="btn btn-warning ml-2">Borrar</button>
                     </div>
                 </form>
@@ -74,3 +74,26 @@
             </div>
         </div>
     </section>
+<script>
+    const boton = document.getElementById('boton');
+    window.addEventListener('load',()=>{
+        boton.addEventListener('click',accionBoton);
+    });
+
+    const accionBoton = () =>{
+        boton.disabled = true;
+        const datos = new URLSearchParams(new FormData(document.getElementById('formRegistro')));
+        fetch('/registro',{
+            method: 'POST',
+            body: datos
+        })
+        .then(response => response.json())
+        .then(data => message(data));
+    }
+
+    const message = (datos) =>{
+        alert(datos.success ? 'Usuario registrado!' : 'Error en el registro :(');
+        window.location.href = '/login';
+        
+    }
+</script>
